# music-scores

./: .gitignore  COPYING  Makefile.am  README.md  concertino.ily  configure.ac  lily-snippets.ily  output-duos.ily  paper.ily  rules.make  tagline.ily.in
Arthur_Seybold/: Makefile.am  composer.ily
Arthur_Seybold/opus_89/: Arthur_Seybold-opus_89.ly  Arthur_Seybold-opus_89.ly.in  Makefile  Makefile.am
Charles_Dancla/: composer.ily
Charles_Dancla/opus_15/: Charles_Dancla-opus_15.ly  Charles_Dancla-opus_15.ly.in  Makefile  Makefile.am
Ferdinand_Küchler/: composer.ily
Ferdinand_Küchler/opus_11/: Ferdinand_Küchler-opus_11.ly  Ferdinand_Küchler-opus_11.ly.in  Makefile  Makefile.am
Ferdinand_Küchler/opus_12/: Ferdinand_Küchler-opus_12.ly  Ferdinand_Küchler-opus_12.ly.in  Makefile  Makefile.am
Ferdinand_Küchler/opus_14/: Ferdinand_Küchler-opus_14.ly  Ferdinand_Küchler-opus_14.ly.in  Makefile
Ferdinand_Küchler/opus_15/: Ferdinand_Küchler-opus_15.ly  Ferdinand_Küchler-opus_15.ly.in  Makefile
Franz_Wohlfahrt/: Makefile.am
Franz_Wohlfahrt/opus_45/: Franz_Wohlfahrt-opus_45.ly  Franz_Wohlfahrt-opus_45.ly.in  Makefile
Friedrich_Seitz/: Makefile.am  composer.ily
Friedrich_Seitz/opus_12/: Friedrich_Seitz-opus_12.ly  Friedrich_Seitz-opus_12.ly.in  Makefile
Friedrich_Seitz/opus_13/: Friedrich_Seitz-opus_13.ly  Friedrich_Seitz-opus_13.ly.in  Makefile
Friedrich_Seitz/opus_22/: Friedrich_Seitz-opus_22.ly  Friedrich_Seitz-opus_22.ly.in  Makefile  Makefile.am
Heinrich_Ernst_Kayser/: Makefile.am
Heinrich_Ernst_Kayser/opus_20/: Heinrich_Ernst_Kayser-opus_20.ly  Heinrich_Ernst_Kayser-opus_20.ly.in  Makefile  Makefile.am
Ignace_Pleyel/: Makefile.am  composer.ily
Ignace_Pleyel/opus_8/: Ignace_Pleyel-opus_8.ly  Ignace_Pleyel-opus_8.ly.in  Makefile  Makefile.am
Jaques-Féréol_Mazas/: Makefile.am
Jaques-Féréol_Mazas/opus_38/: Jaques-Féréol_Mazas-opus_38.ly  Jaques-Féréol_Mazas-opus_38.ly.in  Makefile
Johann_Wenzel_Kalliwoda/opus_178/: Johann_Wenzel_Kalliwoda-opus_178.ly  Johann_Wenzel_Kalliwoda-opus_178.ly.in  Makefile
Johann_Wenzel_Kalliwoda/opus_179/: Johann_Wenzel_Kalliwoda-opus_179.ly  Johann_Wenzel_Kalliwoda-opus_179.ly.in  Makefile
Johann_Wenzel_Kalliwoda/opus_180/: Johann_Wenzel_Kalliwoda-opus_180.ly  Johann_Wenzel_Kalliwoda-opus_180.ly.in  Makefile
Leo_Portnoff/: Makefile.am
Leo_Portnoff/fantasia_2/: Leo_Portnoff-fantasia_2.ly  Leo_Portnoff-fantasia_2.ly.in  Makefile  Makefile.am
Leo_Portnoff/fantasia_4/: Leo_Portnoff-fantasia_4.ly  Leo_Portnoff-fantasia_4.ly.in  Makefile  Makefile.am
Leo_Portnoff/opus_13/: Leo_Portnoff-opus_13.ly  Leo_Portnoff-opus_13.ly.in  Makefile  Makefile.am
Leo_Portnoff/opus_18/: Leo_Portnoff-opus_18.ly  Leo_Portnoff-opus_18.ly.in  Makefile  Makefile.am
Leo_Portnoff/opus_4/: Leo_Portnoff-opus_4.ly  Leo_Portnoff-opus_4.ly.in  Makefile  Makefile.am
Leo_Portnoff/opus_9/: Leo_Portnoff-opus_9.ly  Leo_Portnoff-opus_9.ly.in  Makefile  Makefile.am
Oskar_Rieding/: Makefile.am  composer.ily
Oskar_Rieding/opus_21/: Makefile  Makefile.am  Oskar_Rieding-opus_21.ly  Oskar_Rieding-opus_21.ly.in
Oskar_Rieding/opus_34/: Makefile  Oskar_Rieding-opus_34.ly  Oskar_Rieding-opus_34.ly.in
Oskar_Rieding/opus_35/: Makefile  Oskar_Rieding-opus_35.ly  Oskar_Rieding-opus_35.ly.in
Oskar_Rieding/opus_36/: Makefile  Oskar_Rieding-opus_36.ly  Oskar_Rieding-opus_36.ly.in
emacs/: init.el
include/: Makefile.am  copyright.ily  lily-snippets.ily  paper.ily  tagline.ily.in
src/: Makefile.am  composers.xml
src/Arthur_Seybold/opus_89/: Arthur_Seybold-opus_89.ly.in
src/Charles_Dancla/: Makefile.am
src/Charles_Dancla/opus_15/: Charles_Dancla-opus_15.ly.in  Charles_Dancla-opus_15.xml  Makefile.am
src/Ferdinand_Küchler/: Makefile.am
src/Ferdinand_Küchler/opus_11/: Ferdinand_Küchler-opus_11.xml  local-defs.ily
src/Ferdinand_Küchler/opus_12/: Ferdinand_Küchler-opus_12.xml  local-defs.ily
src/Ferdinand_Küchler/opus_14/: Ferdinand_Küchler-opus_14.ly.in  Ferdinand_Küchler-opus_14.xml  Makefile.am  local-defs.ily
src/Ferdinand_Küchler/opus_15/: Ferdinand_Küchler-opus_15.xml  Makefile.am  local-defs.ily
src/Franz_Wohlfahrt/: composer.ily
src/Franz_Wohlfahrt/opus_45/: Makefile.am
src/Friedrich_Seitz/opus_12/: Friedrich_Seitz-opus_12.ly.in  Makefile.am
src/Friedrich_Seitz/opus_13/: Makefile.am
src/Heinrich_Ernst_Kayser/: composer.ily
src/Ignace_Pleyel/opus_8/: Ignace_Pleyel-opus_8.ly.in  Ignace_Pleyel-opus_8.xml  Makefile.am  local-defs.ily
src/Jaques-Féréol_Mazas/: composer.ily
src/Jaques-Féréol_Mazas/opus_38/: Jaques-Féréol_Mazas-opus_38.xml  Makefile.am
src/Johann_Wenzel_Kalliwoda/: Makefile.am  composer.ily
src/Johann_Wenzel_Kalliwoda/opus_178/: Johann_Wenzel_Kalliwoda-opus_178.xml  Makefile.am
src/Johann_Wenzel_Kalliwoda/opus_179/: Johann_Wenzel_Kalliwoda-opus_179.xml  Makefile.am
src/Johann_Wenzel_Kalliwoda/opus_180/: Johann_Wenzel_Kalliwoda-opus_180.xml  Makefile.am
src/Leo_Portnoff/: Makefile.am  composer.ily
src/Leo_Portnoff/fantasia_2/: Leo_Portnoff-fantasia_2.ly.in
src/Leo_Portnoff/fantasia_4/: Leo_Portnoff-fantasia_4.ly.in
src/Leo_Portnoff/opus_13/: Leo_Portnoff-opus_13.xml  local-defs.ily
src/Leo_Portnoff/opus_14/: Leo_Portnoff-opus_14.xml  Makefile.am  local-defs.ily
src/Leo_Portnoff/opus_18/: Leo_Portnoff-opus_18.xml  local-defs.ily
src/Leo_Portnoff/opus_4/: Leo_Portnoff-opus_4.ly.in
src/Leo_Portnoff/opus_9/: Leo_Portnoff-opus_9.ly.in  Leo_Portnoff-opus_9.xml  local-defs.ily
src/Leo_Portnoff/opus_96/: Leo_Portnoff-opus_96.xml  Makefile.am
src/Oskar_Rieding/opus_21/: Oskar_Rieding-opus_21.xml
src/Oskar_Rieding/opus_34/: Makefile.am  Oskar_Rieding-opus_34.ly.in  Oskar_Rieding-opus_34.xml
src/Oskar_Rieding/opus_35/: Makefile.am  Oskar_Rieding-opus_35.ly.in  Oskar_Rieding-opus_35.xml
src/Oskar_Rieding/opus_36/: Makefile.am
templates/: common_blocks.mako  concertino.ily  concertino.mako  duos.mako  output-duos.ily
