# -*- coding: utf-8 -*-
#
# Copyright © 2020-2020 Philipp Büttgenbach
#
# This work is licensed under the Creative Commons
# Attribution-ShareAlike 4.0 International License.  To view a copy of
# this license, visit http://creativecommons.org/licenses/by-sa/4.0/.
#

SUBDIRS = fantasia_2  fantasia_4 \
	  opus_13  opus_18  opus_9

# Local Variables:
# coding: utf-8
# mode: Makefile
# End:
