# -*- coding: utf-8 -*-
#
# Copyright © 2020-2020 Philipp Büttgenbach
#
# This work is licensed under the Creative Commons
# Attribution-ShareAlike 4.0 International License.  To view a copy of
# this license, visit http://creativecommons.org/licenses/by-sa/4.0/.
#

SUBDIRS = opus_21  opus_34  opus_35  opus_36

# Local Variables:
# coding: utf-8
# mode: Makefile
# End:
